# src/FundingProjection.Api/FundingProjection.Api_swagger.json
@@ -120,42 +120,22 @@
               }
             }
           },
-          "201": {
-            "description": "Created",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/GetCommittedLearnerResponse"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/GetCommittedLearnerResponse"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/GetCommittedLearnerResponse"
-                }
-              }
-            }
-          },
           "200": {
             "description": "OK",
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/GetCommittedLearnerResponse"
+                  "$ref": "#/components/schemas/ImportJobStateResponse"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/GetCommittedLearnerResponse"
+                  "$ref": "#/components/schemas/ImportJobStateResponse"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/GetCommittedLearnerResponse"
+                  "$ref": "#/components/schemas/ImportJobStateResponse"
                 }
               }
             }
@@ -229,42 +209,22 @@
               }
             }
           },
-          "201": {
-            "description": "Created",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/GetCommittedLearnerResponse"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/GetCommittedLearnerResponse"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/GetCommittedLearnerResponse"
-                }
-              }
-            }
-          },
           "200": {
             "description": "OK",
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/GetCommittedLearnerResponse"
+                  "$ref": "#/components/schemas/ImportJobStateResponse"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/GetCommittedLearnerResponse"
+                  "$ref": "#/components/schemas/ImportJobStateResponse"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/GetCommittedLearnerResponse"
+                  "$ref": "#/components/schemas/ImportJobStateResponse"
                 }
               }
             }
@@ -735,6 +695,48 @@
             "format": "double"
           },
           "lastRecalculatedDate": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "createdDate": {
+            "type": "string",
+            "format": "date-time"
+          }
+        },
+        "additionalProperties": false
+      },
+      "ImportJobStateResponse": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "jobName": {
+            "$ref": "#/components/schemas/JobName"
+          },
+          "lastSuccessfulImportDate": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "lastAttemptedDate": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "lastAttemptSuccessful": {
+            "type": "boolean"
+          },
+          "totalRecordsLastRun": {
+            "pattern": "^-?(?:0|[1-9]\\d*)$",
+            "type": "integer",
+            "format": "int32"
+          },
+          "failedRecordsLastRun": {
+            "pattern": "^-?(?:0|[1-9]\\d*)$",
+            "type": "integer",
+            "format": "int32"
+          },
+          "updatedDate": {
             "type": "string",
             "format": "date-time"
           },
